Add useUser
